# sales_forecasting

./: .gitignore  README.md  pyproject.toml
config/: path.yaml
data/preprocessed-data/: weather.csv
data/raw-data/: 2016_sales.csv  2017_sales.csv
docs/: asdf_commands.md  poetry_commands.md
src/features/: generate_weather_data.py  preprocess.py
src/utils/: data_manager.py  logger.py  utils.py
