[tool.poetry]
name = "sales-forecasting"
version = "0.1.0"
description = ""
authors = ["THAI HA NGUYEN <nguyenha.mse@gmail.com>"]
readme = "README.md"
packages = [{include = "sales_forecasting"}]

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "3.31.0"
lightgbm = "^4.2.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
seaborn = "^0.13.1"
shap = "^0.44.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
